--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "antd": "^5.6.1",
     "framer-motion": "^10.12.16",
     "next": "13.4.5",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.0-rc.3"
   },
